--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <!-- Header start -->
     <header>
       <nav>
         <h3 class="nav-title">G3 Architects</h3>
@@ -19,12 +20,41 @@
       </nav>
       <div class="banner">
         <div class="banner-content">
-          <h1 class="banner-title">Brand New <br> Group of Architects</h1>
-          <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+          <h1 class="banner-title">
+            Brand New <br />
+            Group of Architects
+          </h1>
+          <p class="banner-description">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even
+          </p>
           <button class="btn-primary">Explore More</button>
         </div>
-        <img src="images/banner.png" alt="">
+        <img src="images/banner.png" alt="" />
       </div>
     </header>
+    <!-- Header end -->
+    <!-- Main start -->
+    <main>
+      <!-- Features section start  -->
+      <section class="features-section">
+        <div class="features-img">
+          <img src="images/team1.png" alt="" />
+          <img src="images/team2.png" alt="" />
+          <img src="images/team3.png" alt="" />
+          <img src="images/team4.png" alt="" />
+        </div>
+        <div class="features-content">
+            <h2 class="features-title">
+                <span class="quick-list">Quick list</span> <span class="of-our">of Our </span> <span class="features">Features</span>
+            </h2>
+            <p class="features-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+            <button class="btn-primary">Explore More</button>
+        </div>
+      </section>
+      <!-- Features section End -->
+    </main>
+    <!-- Main End -->
   </body>
 </html>
