--- a/index.html
+++ b/index.html
@@ -46,14 +46,53 @@
           <img src="images/team4.png" alt="" />
         </div>
         <div class="features-content">
-            <h2 class="features-title">
-                <span class="quick-list">Quick list</span> <span class="of-our">of Our </span> <span class="features">Features</span>
-            </h2>
-            <p class="features-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
-            <button class="btn-primary">Explore More</button>
+          <h2 class="features-title">
+            <span class="quick-list">Quick list</span>
+            <span class="of-our">of Our </span>
+            <span class="features">Features</span>
+          </h2>
+          <p class="features-description">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even
+          </p>
+          <button class="btn-primary">Explore More</button>
         </div>
       </section>
       <!-- Features section End -->
+      <!-- Some facts section start -->
+      <section class="some-facts">
+        <div class="facts">
+          <h2 class="facts-title">Some Facts</h2>
+          <p class="facts-description">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration.
+          </p>
+        </div>
+        <div class="card-container">
+          <div class="card">
+            <img src="images/icons/ribon.png" alt="" />
+            <h2 class="card-state">54</h2>
+            <p class="card-title">Awards Winnings</p>
+          </div>
+          <div class="card">
+            <img src="images/icons/projects.png" alt="" />
+            <h2 class="card-state">1458</h2>
+            <p class="card-title">Project Finished</p>
+          </div>
+          <div class="card">
+            <img src="images/icons/customers.png" alt="" />
+            <h2 class="card-state">590</h2>
+            <p class="card-title">Clients Worked</p>
+          </div>
+          <div class="card">
+            <img src="images/icons/email.png" alt="" />
+            <h2 class="card-state">22578</h2>
+            <p class="card-title">Email Send</p>
+          </div>
+        </div>
+      </section>
+      <!-- Some facts section End -->
     </main>
     <!-- Main End -->
   </body>
