--- a/index.html
+++ b/index.html
@@ -93,7 +93,33 @@
         </div>
       </section>
       <!-- Some facts section End -->
+      <!-- Sponsor section Start -->
+      <section class="sponsor-section">
+        <div class="sponsor-banner">
+          <h2 class="sponsor-title">Our Sponspors</h2>
+          <p class="sponsor-description">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration.
+          </p>
+        </div>
+        <div class="sponsor-company">
+          <img src="images/sponsors/spotify.png" alt="" />
+          <img src="images/sponsors/amazon.png" alt="" />
+          <img src="images/sponsors/google.png" alt="" />
+          <img src="images/sponsors/telerama.png" alt="" />
+          <img src="images/sponsors/figma.png" alt="" />
+        </div>
+      </section>
+      <!-- Sponsor section End -->
     </main>
     <!-- Main End -->
+    <!-- Footer section -->
+    <footer>
+      <div class="footer">
+        <p class="footer-descriptin">
+          All rights reserved copyright @2024 startup landing page design <br> &copy; Esrail Haque
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
