--- a/index.html
+++ b/index.html
@@ -103,11 +103,11 @@
           </p>
         </div>
         <div class="sponsor-company">
-          <img src="images/sponsors/spotify.png" alt="" />
-          <img src="images/sponsors/amazon.png" alt="" />
-          <img src="images/sponsors/google.png" alt="" />
-          <img src="images/sponsors/telerama.png" alt="" />
-          <img src="images/sponsors/figma.png" alt="" />
+         <div> <img src="images/sponsors/spotify.png" alt="" /></div>
+         <div> <img src="images/sponsors/amazon.png" alt="" /></div>
+          <div><img src="images/sponsors/google.png" alt="" /></div>
+          <div><img src="images/sponsors/telerama.png" alt="" /></div>
+         <div> <img src="images/sponsors/figma.png" alt="" /></div>
         </div>
       </section>
       <!-- Sponsor section End -->
